# clean-architecture-rust

./: .env  .env.test  .gitignore  Cargo.toml  LICENSE  README.md  diesel.toml  fact.db  rustfmt.toml
.github/workflows/: ci.yml  rust.yml
migrations/2022-05-01-133226_init/: down.sql  up.sql
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/adapters/api/: mod.rs
src/adapters/api/cat_facts/: cat_fact_presenter.rs  cat_facts_controller.rs  cat_facts_controllers.rs  cat_facts_mappers.rs  cat_facts_payloads.rs  cat_facts_presenters.rs  mod.rs
src/adapters/api/dog_facts/: dog_fact_presenter.rs  dog_facts_controller.rs  dog_facts_controllers.rs  dog_facts_mappers.rs  dog_facts_payloads.rs  dog_facts_presenters.rs  mod.rs
src/adapters/api/shared/: app_state.rs  error_presenter.rs  mod.rs  routes.rs
src/adapters/spi/: mod.rs
src/adapters/spi/db/: db.rs  db_connection.rs  db_dog_facts_repository.rs  db_mappers.rs  dog_facts_repository.rs  mod.rs  models.rs  schema.rs
src/application/: mod.rs
src/application/mappers/: api_mapper.rs  db_mapper.rs  http_mapper.rs  mod.rs
src/application/repositories/: cat_facts_repository_abstract.rs  dog_facts_repository_abstract.rs  mod.rs
src/application/usecases/: get_all_cat_facts_usecase.rs  get_all_dog_facts_usecase.rs  get_one_dog_fact_by_id_usecase.rs  get_one_random_cat_fact_usecase.rs  interfaces.rs  mod.rs
src/application/utils/: error_handling_utils.rs  mod.rs
src/domain/: cat_fact_entity.rs  dog_fact_entity.rs  error.rs  mod.rs
src/infrastructure/: mod.rs
tests/: mod.rs
tests/fixtures/: dog_facts.json  fixtures_run.rs  fixtures_struct.rs
tests/integration_tests/: cat_facts.rs  dog_facts.rs  mod.rs  test_cat_facts.rs  test_dog_facts.rs
tests/integration_tests/fixtures/: cat_facts.json  dog_facts.json  fixtures_run.rs  mod.rs
tests/utils/: mod.rs  test_context.rs  test_context_pg.rs  test_context_sqlite.rs  utils_file.rs  utils_http.rs  utils_setup.rs
(+7 files in other folders)
