[package]
name = "animal_facts_api"
version = "1.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "animal_facts_api"
path = "src/main.rs"

[lib]
name = "animal_facts_api"
path = "src/lib.rs"

[dependencies]
actix-web = { version = "4", features = ["openssl"] }
actix-rt = "~2.7"
actix-http = "~3.0"
log = "~0.4.0"
env_logger = "~0.9"
failure = "~0.1"
serde = "~1.0"
serde_json = "~1.0"
async-trait = "~0.1"
diesel = { version = "~1.4", features = ["postgres", "r2d2", "uuidv07"] }
diesel_migrations = "~1.4"
dotenv = "~0.15"
r2d2 = "~0.8"
tokio = { version = "~1.18", features = ["full"] }
thiserror = "~1.0"
derive_more = "~0.99"
reqwest={version="0.11", features = ["json"]}

[dev-dependencies]
cargo-tarpaulin = "~0.20"
uuid = { version = "~1.0", features = ["serde", "v4"] }
mockall = "~0.11"